# actias

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  i586-unknown-none.json  limine.cfg  run.sh  rustfmt.toml  set-target.sh  syscalls.rs  test.sh  test.tar  todo.txt
.cargo/: config.toml  config.toml.stub
actias/: Cargo.toml  build.rs
actias-api/: Cargo.toml
actias-api/src/: lib.rs
actias/src/: logger.rs  main.rs
actias/src/arch/: mod.rs
actias/src/arch/x86/: init.S  kernel.ld  logger.rs  mod.rs
actias/src/platform/: mod.rs
actias/src/platform/multiboot/: boot.S  logger.rs  mod.rs
common/: Cargo.toml
common/src/: errno.rs  lib.rs  syscalls.rs
common/src/arch/i586/: mod.rs  paging.rs
common/src/logger/: ibmpc.rs
common/src/mm/: heap.rs  mod.rs  paging.rs
common/src/types/: errno.rs  file.rs  keysym.rs  mod.rs  signals.rs  syscalls.rs
common/src/util/: array.rs  mod.rs
interface/: Cargo.toml
interface/src/: lib.rs  syscalls.rs
interrupt-macro/: Cargo.toml
interrupt-macro/src/: lib.rs
kernel/: Cargo.toml  build.rs  build.rs.stub
kernel/src/: array.rs  cpu.rs  exec.rs  futures.rs  logging.rs  main.rs  process.rs  sched.rs  syscalls.rs  tar.rs  timer.rs  unwind.rs  vfs.rs
kernel/src/arch/: bsp.rs  mod.rs
kernel/src/arch/i586/: acpi.rs  apic.rs  build.rs  build.rs.stub  cpu_bootstrap.S  cpu_bootstrap.ld  gdt.rs  interrupts.rs  ints.rs  mod.rs  paging.rs  syscalls.rs  tasks.rs
kernel/src/fs/: kernel.rs  mod.rs  proc.rs  sys.rs  tar.rs  user.rs
kernel/src/mm/: bump_alloc.rs  heap.rs  init.rs  mod.rs  paged.rs  paging.rs  regions.rs  shared.rs  sync.rs  virt.rs
kernel/src/platform/: mod.rs
kernel/src/platform/ibmpc/: boot.S  bootloader.rs  build.rs  debug.rs  irq.rs  kernel.ld  keyboard.rs  logger.rs  mod.rs  vga.rs
kernel/src/platform/multiboot/: boot.S  bootloader.rs  build.rs.stub  kernel.ld  logger.rs  mod.rs
kernel/src/task/: cpu.rs  exec.rs  ipc.rs  mod.rs  queue.rs  switch.rs  syscalls.rs
kernel/src/tasks/: executor.rs  mod.rs  timer.rs
kernel/src/util/: abi.rs  array.rs  debug.rs  mod.rs  tar.rs
limine/: limine-deploy
loader/: Cargo.toml  build.rs
loader/src/: main.rs  tar.rs
loader/src/boot/ibmpc/: boot.S  bootloader.rs  exec_kernel.S  ints.rs  logger.rs  mod.rs
src/: console.rs  errno.rs  exec.rs  keysym.rs  logging.rs  macros.rs  main.rs  mm.rs  syscalls.rs  tar.rs  tasks.rs  test.rs  unwind.rs  vfs.rs
src/arch/i586/: boot.S  debug.rs  gdt.rs  ints.rs  mod.rs  paging.rs  syscalls.rs  tasks.S  tasks.rs  vga.rs
src/fs/: mod.rs  ops.rs  tar.rs  tree.rs  vfs.rs
src/mm/: heap.rs  mod.rs  paging.rs
src/platform/ibmpc/: boot.S  bootloader.rs  debug.rs  io.rs  irq.S  irq.rs  keyboard.rs  mod.rs  vga.rs
src/types/: errno.rs  mod.rs  signals.rs  syscalls.rs
src/util/: array.rs
test-bin/: Cargo.toml
test-bin/src/: main.rs
test-bin2/: Cargo.toml
test-bin2/src/: main.rs
