[package]
name = "ockernel"
version = "0.1.0"
edition = "2021"
authors = [ "velleda" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned = "0.4.0"
x86 = "0.47.0"
bitmask-enum = "1.1.3"
num_enum = { version = "0.5.7", default-features = false }

[build-dependencies]
cc = "1.0"

[profile.test]
opt-level = "z"
strip = "symbols"
debug = 1
