[package]
name = "actias"
version = "0.5.0"
edition = "2021"
description = "the Actias microkernel"
license = "ISC"

[dependencies]
actias-api = { path = "../actias-api" }
log = "0.4"
spin = "0.9"

[target.'cfg(target_arch = "x86")'.dependencies]
x86 = "0.52"

[build-dependencies]
cc = "1"
vergen = { version = "7", default-features = false, features = ["build", "rustc"] }
