[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
aligned = "0.4"
x86 = "0.47"
bitmask-enum = "1.1"
num_enum = { version = "0.5", default-features = false }
linked_list_allocator = "0.9"
generic-array = "0.14"
goblin = { version = "0.5", default-features = false, features = [ "elf32", "elf64", "mach32", "mach64" ]}
lazy_static = { version = "1.4", default-features = false, features = [ "spin_no_std" ] }
byteorder = { version = "1.4", default-features = false }

[build-dependencies]
cc = "1.0"
