[package]
name = "kernel"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
log = "0.4"
x86 = "0.52"
bitmask-enum = "2"
spin = "0.9"

[build-dependencies]
cc = "1"
vergen = { version = "7", default-features = false, features = [ "build", "rustc" ] }
