[package]
name = "kernel"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
log = "0.4"
x86 = "0.52"
bitmask-enum = "2"
spin = "0.9"
linked_list_allocator = "0.10"
num-traits = { version = "0.2", default-features = false }
futures = { version = "0.3", default-features = false, features = [ "alloc" ] }
crossbeam = { version = "0.8", default-features = false, features = [ "alloc" ] }
num_enum = { version = "0.6", default-features = false }
const_soft_float = { version = "0.1", features = [ "no_std" ] }

[build-dependencies]
cc = "1"
vergen = { version = "7", default-features = false, features = [ "build", "rustc" ] }
