[package]
name = "loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common/" }
log = "0.4"
generic-array = "0.14"
compression = { version = "0.1", features = [ "gzip", "bzip2" ], default_features = false }

[build-dependencies]
cc = "1.0"
