[package]
name = "loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common/" }
log = "0.4"
aligned = "0.4"
bitmask-enum = "1.1"
generic-array = "0.14"
compression = { version = "0.1", default_features = false, features = [ "gzip", "bzip2" ] }
goblin = { version = "0.5", default-features = false, features = [ "elf32", "elf64", "endian_fd" ]}
x86 = "0.47"

[build-dependencies]
cc = "1.0"
